--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,11 @@
 
     <description>HP Fortify CloudScan Jenkins plugin provides an easy way to setup CloudScan jobs in Jenkins</description>
     <url>https://github.com/jenkinsci/fortify-cloudscan-plugin</url>
-    <parent>
-        <groupId>org.jenkins-ci.plugins</groupId>
-        <artifactId>plugin</artifactId>
-        <version>3.2</version>
+  <parent>
+    <groupId>org.jenkins-ci.plugins</groupId>
+    <artifactId>plugin</artifactId>
+    <version>4.51</version>
+    <relativePath/>
     </parent>
 
     <!--
@@ -53,7 +54,6 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.level>8</java.level>
     </properties>
 
     <dependencies>
@@ -65,12 +65,10 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.19</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
